--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,9 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
+<nav class="nav justify-content-end" style="background-color: #c4c4c4;">
+    <ul class="nav">
+        <li class="nav-item">
+            <a class="nav-link active" href="http://github.com">GitHub</a>
+        </li>
+    </ul>
+</nav>
 
 {{outlet}}
